--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -5,15 +5,54 @@
   justify-content: space-between;
   margin-bottom: 25px;
 
+
   .logo-container {
     height: 100%;
     width: 70px;
     padding: 25px;
+
+    .logo {
+      animation: bounceIn 0.6s;
+      transform: rotate(0deg) scale(1) translateZ(0);
+      transition: all 0.4s cubic-bezier(.8,1.8,.75,.75);
+      cursor: pointer;
+    }
+
+    .logo:hover {
+      transform: rotate(10deg) scale(1.2);
+    }
+
+    .bubble { fill: #e76853; }
+    .icon { fill:  #fff; }
+
+    @keyframes bounceIn {
+      0% {
+        opacity: 1;
+        transform: scale(.3);
+      } 
+
+      50% {
+        opacity: 1;
+        transform: scale(1.05);
+      } 
+
+      70% {
+        opacity: 1;
+        transform: scale(.9);
+      }
+
+      100% {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+
   }
 
   .options {
     width: 50%;
     height: 100%;
+    padding: 15px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
