--- a/src/Pages/CheckoutPage/CheckoutPage.scss
+++ b/src/Pages/CheckoutPage/CheckoutPage.scss
@@ -27,6 +27,16 @@
   .total {
     margin-top: 30px;
     margin-left: auto;
-    font-size: 36px;
+    font-size: 30px;
+    display:flex;
+    justify-content: space-between;
+  }
+
+  .test-details {
+    text-align: center;
+    color:red;
+    font-size:24px;
+    margin-top: 1px;
+    margin-bottom: 5px;
   }
 }
