--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -10,13 +10,14 @@
     height: 100%;
     width: 70px;
     padding: 25px;
+    justify-content: space-between;
 
     .logo {
       animation: bounceIn 0.6s;
       transform: rotate(0deg) scale(1) translateZ(0);
       transition: all 0.4s cubic-bezier(.8,1.8,.75,.75);
       cursor: pointer;
-    }
+    } 
 
     .logo:hover {
       transform: rotate(10deg) scale(1.2);
@@ -47,6 +48,21 @@
       }
     }
 
+  }
+
+  .app-name {
+    font-family: Garamond ;
+    font-size: 20px;
+    text-align: center;
+    border-bottom: 2px solid pink;
+   // border-right: 2px solid pink;
+    // border-left: 2px solid pink;
+    // margin-top: 1vw  ;
+    // margin-right: 19%;
+    margin-left: 38.5%;
+    color:black;
+
+    // margin-bottom:20px;
   }
 
   .options {
