--- a/src/Pages/Homepage/Homepage.scss
+++ b/src/Pages/Homepage/Homepage.scss
@@ -1,7 +1,11 @@
 .homepage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 80px;
-  
+	
+	.homepage-components {
+  		display: flex;
+		flex-direction: column;
+		align-items: center;
+		padding: 20px 60px; 
+
+	}
 }
+
