--- a/src/Components/Collection-Item/CollectionItem.scss
+++ b/src/Components/Collection-Item/CollectionItem.scss
@@ -6,6 +6,19 @@
   align-items: center;
   position:relative;
 
+   @media screen and (max-width: 800px) {
+      width:40vw;
+      &:hover {
+        .image {
+          opacity:unset;
+        }
+
+        .custom-button{
+          opacity:unset;   
+        }
+      }
+  }
+
   .image {
     width: 100%;
     height: 95%;
@@ -21,6 +34,13 @@
     position:absolute;
     justify-content: center;
     display:none;
+
+    @media screen and (max-width: 800px) {
+      display: block;
+      opacity: 0.9;
+      min-width: unset;
+      padding: 0 10px;
+    }
   }
 
   .item-description{
