--- a/src/Components/MenuItem/MenuItem.scss
+++ b/src/Components/MenuItem/MenuItem.scss
@@ -25,15 +25,25 @@
 
   &.large {
     height:380px;
+
+    @media screen and (max-width: 800px) {
+      height:200px;
+  }
   }
 
   &:first-child {
     margin-right: 7.5px;
+
   }
 
   &:last-child {
     margin-left: 7.5px;
   }
+
+  @media screen and (max-width: 800px) {
+      height:200px;
+  }
+  
 
   .background-image {
     width:100%;
@@ -65,5 +75,6 @@
       font-weight: lighter;
       font-size: 16px;
     }
+
   }
 }
