--- a/src/Pages/CheckoutPage/CheckoutPage.scss
+++ b/src/Pages/CheckoutPage/CheckoutPage.scss
@@ -6,8 +6,16 @@
   align-items: center;
   margin: 50px auto 0;
 
+  @media screen and (max-width: 800px) {
+    width: 90%;
+
+  }
+
+
+
   .checkout-header {
     width: 100%;
+    height:40px;
     padding: 10px 0;
     display: flex;
     justify-content: space-between;
@@ -16,10 +24,18 @@
     .header-block {
       text-transform: capitalize;
       width: 23%;
-      
+
 
       &:last-child {
         width: 8%;
+      }
+
+      @media screen and (max-width: 800px) {
+        width: 22%;
+
+        &:last-child {
+          width: 12%;
+        }
       }
     }
   }
@@ -38,5 +54,11 @@
     font-size:24px;
     margin-top: 1px;
     margin-bottom: 5px;
+
+    @media screen and (max-width: 800px) {
+      font-size:20px;
+      width: 90%;
+    }
+
   }
 }
