Background for the website

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
 	font-family: 'Open Sans Condensed';
 	padding:20px 40px;
+	background-color:grey
 
 
 	@media screen and (max-width: 800px) {
