--- a/src/Components/Collection-Item/CollectionItem.scss
+++ b/src/Components/Collection-Item/CollectionItem.scss
@@ -46,13 +46,13 @@
   .item-description{
     width:75%;
     opacity:0.7;
-    top:10%;
+    top:15%;
     display:none;
     justify-content: center;
     position:absolute;
     font-size: 24px;
     font-weight: bold;
-    color:auto;
+    color:black;
 
   }
 
