--- a/src/Components/Collection-Preview/CollectionPreview.scss
+++ b/src/Components/Collection-Preview/CollectionPreview.scss
@@ -18,7 +18,7 @@
 
     @media screen and (max-width: 800px) {
       display:grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
       grid-gap:15px;
     }
   }
