--- a/src/Components/Collection-Overview/CollectionOverview.scss
+++ b/src/Components/Collection-Overview/CollectionOverview.scss
@@ -2,10 +2,10 @@
 	display:flex;
 	flex-direction:column;
 
-	@media screen and (max-width: 800px) {
-      align-items:center;
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      grid-gap:15px;
-  }
+	// @media screen and (max-width: 800px) {
+ //      align-items:center;
+ //      display:grid;
+ //      grid-template-columns: 1fr 1fr;
+ //      grid-gap:15px;
+ //  }
 }
