--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image:url('app-background.jpg')
+  /*background:url('18350.jpg');*/
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+   background-size: contain;
 }
 
 code {
