Moved Images to Assets folder and Optimized the Type Ahead Search Feature to Work on the Menu Page as well as the Individual Collection Page

--- a/src/Components/SearchBox/SearchBox.css
+++ b/src/Components/SearchBox/SearchBox.css
@@ -1,3 +1,7 @@
 .search-box {
-	padding:2px;
+	padding:5px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	box-sizing: content-box;
 }
