--- a/src/Pages/Signin&SignUp/Signin&Signup.scss
+++ b/src/Pages/Signin&SignUp/Signin&Signup.scss
@@ -3,4 +3,14 @@
 	display:flex;
 	justify-content: space-between;
 	margin:30px auto;
+
+	@media screen and (max-width: 800px) {
+      display:grid;
+      grid-template-columns: 1fr;
+      grid-gap:15px;
+      width:100vw;
+      margin:30px auto;
+
+    }
+
 }
